# ProyectoEstructuras

./: CMakeLists.txt  Carta.h  Comandos.h  Consola.cpp  Consola.h  GestorArchivos.cpp  Jugador.cpp  Jugador.h  Mapa.cpp  Mapa.h  Mazo.cpp  Mazo.h  NavMenu.cpp  NavMenu.h  Territorio.cpp  Territorio.h  gameMaster.cpp  gameMaster.h  main.cpp
Archivos/: GestorArchivos.h
Comandos/: ConfiguracionJuego.cpp  ConfiguracionJuego.h  Turno.cpp  Turno.h  utilidadesRisk.cpp  utilidadesRisk.h
Consola/: Consola.cpp  Consola.h  NavMenu.cpp
ObjetosRisk/: Carta.cpp  Carta.h  Jugador.cpp  Jugador.h  Mapa.cpp  Mapa.h  Mazo.cpp  Mazo.h  ObjetosRisk.h  Territorio.cpp  Territorio.h  gameMaster.cpp  gameMaster.h
comandos/: ConfiguracionJuego.cpp  ConfiguracionJuego.h  Turno.cpp  Turno.h  utilidadesRisk.cpp  utilidadesRisk.h
